# td3-control

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.cjs
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  release.yml
config/: default_env.template
docs/: BANK.md  BANK_BUTTONS.md  BOTTOM_TOOLBAR.md  CLI.md  FAQ.md  FORMATS.md  MAIN.md  MAIN_PAGE_TOOLBAR.md  MAIN_SECONDARY_TOOLBAR.md  MULTIPATTERN_TECHNOLOGY.md  PATTERN_ROW_BUTTONS.md  PROGRESSIONS.md  SETTINGS.md  SIDEBAR.md  SIMPLE_VS_MAGIC_RANDOMIZER.md  TECHNICAL_ARCHITECTURE.md
scripts/: enable-github-security-quality.ps1  package-release.sh
scripts/dev/: js_tests_linux.sh  js_tests_macos.sh  js_tests_win.bat  run_linux.sh  run_macos.sh  run_windows.bat  rust_integration_test_linux.sh  rust_integration_test_macos.sh  rust_integration_test_win.bat  rust_tests_linux.sh  rust_tests_macos.sh  rust_tests_win.bat
src/: app.rs  app_env.rs  browser.rs  config.rs  env_metadata.rs  env_writer.rs  error.rs  main.rs  midi_exchange_lock.rs  midi_io.rs  midi_ports.rs  midi_session.rs  path_safety.rs  pattern.rs  step.rs  td3_protocol.rs
src/app/: bank_workflows.rs  control.rs  device.rs  file_io.rs  pattern_import.rs  ports.rs  session.rs
src/app_env/: keys.rs  mod.rs  model.rs  parse.rs  template.rs  values.rs
src/bank/: address.rs  backup.rs  diff.rs  extract.rs  import.rs  inventory.rs  manifest.rs  mod.rs  pack.rs  rbs_bank.rs
src/config/: cli.rs  model.rs  parse.rs  resolve.rs
src/formats/: json.rs  mid.rs  (+9 more)
ui/: bank.html  index.html  progression.html  settings.html
(+386 files in other folders)
