[package]
name = "td3-control"
version = "1.1.1"
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "0.11"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
log = "0.4.31"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.13.4", default-features = false, features = ["json"] }
rust-embed = { version = "8", features = ["mime-guess", "include-exclude"] }
mime_guess = "2"
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow"] }
webbrowser = "1"
zip = { version = "8", default-features = false, features = ["deflate-flate2"] }
sha2 = "0.11"
rusqlite = { version = "0.40", features = ["bundled"] }
rfd = { version = "0.17.2", default-features = false, features = ["common-controls-v6", "xdg-portal"] }

# Windows-only: raise the system timer resolution to 1 ms and bump the
# MIDI clock thread to TIME_CRITICAL priority so `thread::sleep` doesn't
# align to the default 15.625 ms quantum (which introduces audible jitter
# on 0xF8 ticks at 120+ BPM) and the scheduler doesn't preempt us mid-wait.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Media", "Win32_System_Threading"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[features]
